2013-06-09  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/akfavatar.pas (ReadKeyCode): new function

	* pascal/akfavatar.pas (reserve_single_keys): new function
	(CheckEsc): removed

2013-06-04  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/akfavatar.pas: updated

2013-06-03  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_char): handle more invisible chars

2013-05-30  Andreas K. Foerster  <info@akfoerster.de>

	* avtencoding.c, mingw/win_iconv.c: removed at last

2013-05-23  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c: use new char functions

2013-05-22  Andreas K. Foerster  <info@akfoerster.de>

	* charencoding.c: new file
	all encoding stuff rewritten
	lua/lua-avt.c: reset to use the _mb functions again for now

	* sysencoding.c: new file

	* avatar.c: remove all positioning variables from avt_settings
	(fixes bug with resizing of pager)

2013-05-18  Andreas K. Foerster  <info@akfoerster.de>

	* charmaps.c, cp1252.c: new files

2013-05-13  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_char): put overstrike technique there
	callers adapted

	* lua/lua-avt.c: use _u8 and _l1 functions

2013-05-11  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.c: avt_char is uint_least32_t now

	* avatar-linuxfb.c (utf8_to_unicode): new function
	(avt_start): select UTF-8 mode
	(quit_fb): reset terminal

2013-05-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_char): fix handling spurious high surrogate

2013-05-09  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.c: avt_char is unsigned now
	(avt_choice): adapted

2013-05-08  Andreas K. Foerster  <info@akfoerster.de>

	* avtutf8.c: new file

2013-05-07  Andreas K. Foerster  <info@akfoerster.de>

	* avtlatin1.c: new file

	* avatar.c (avt_credits): fix finding end of text

	* avatar.c (avt_put_char, avt_tell_len):
	do show SUB ('\x1A'), do not show DEL ('\x7F')

	* lua/akfavatar/utf8.lua (u8.to_latin1):